# kit-pse

./: .gitignore  README.md  anomaly.py  kdd.py  knn-result.txt  main.py  makefile  pyproject.toml  signatures.json  test.py  ui.py
.github/workflows/: tests.yml
ml_artifact/model/integration/: MLPClassifier.joblib
ml_artifact/model/trained_model/: DecisionTreeClassifier.joblib  LogisticRegression.joblib
reports/: sdqtechreport.cls  specification.tex  techreport.tex  template.tex
reports/assets/: sdqtechreport.cls
src/: checker.py  conf.py  fragment.py  logger.py  main.py  python-main.sh  send_test_packets.py  signature.py  tcp.py  test.py  test_arp.py  test_content_length.py  test_dns_spoofing.py  test_fragment.py  test_signature.py  test_tcp.py  test_utils.py
src/UI/: testUI.py
src/check/: check.py  checksum.py  dns_spoofing.py  malformed_packet.py  signature.py
src/check/arp/: arp_spoofing.py
src/check/ip/: destination.py  fragment_overlap.py  icmp_flood.py  ip_spoofing.py
src/check/ml/: check.py  ml_check.py  training.py
src/check/tcp/: connection.py  flag.py  handshake.py  null_packet.py  port_check.py
src/check/udp/: anomaly.py
src/logging/: logger.py  slack.py
src/machine_learning/: model_enum.py  trainer.py
src/test/: test_arp.py  test_dns_spoofing.py  test_fragment.py  test_signature.py  test_tcp.py  test_utils.py
src/ui/: ai_rewrite.py  main.py
src/utils/: download.py  signature.py
