[project]
name = "kit-pse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.15"
dependencies = [
    "black>=24.10.0",
    "joblib>=1.4.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scapy>=2.6.1",
    "scikit-learn>=1.6.1",
    "slack-sdk>=3.34.0",
]
